[package]
name = "leptoaster"
version = "0.2.2"
edition = "2024"
license = "MIT"
description = "A minimal toast library for Leptos."
repository = "https://github.com/KiaShakiba/leptoaster"
readme = "README.md"
keywords = ["leptos", "toast", "web", "ui", "userinterface"]
categories = ["gui", "web-programming"]

[dependencies]
leptos = { version = "0.7" }

[features]
csr = ["leptos/csr"]
ssr = ["leptos/ssr"]
hydrate = ["leptos/hydrate"]
